Rework a bunch of assets for file size
These files were big! The wasm module itself probably presents more of a
problem tbh though

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ default = [
     "bevy/bevy_text",
     "bevy/bevy_ui",
     "bevy/png",
+    "bevy/jpeg",
     "bevy/hdr",
     "bevy/zstd",
     "bevy/x11",
