--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,9 +24,14 @@ jobs:
     steps:
       - name: Get tag
         id: tag
-        run: echo "tag=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
+        env:
+          TAG: ${{ github.event.inputs.version || github.ref_name }}
+        run: |
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "version=${TAG#v}" >> "$GITHUB_OUTPUT"
     outputs:
-      version: ${{ inputs.version || steps.tag.outputs.tag }}
+      tag: ${{ steps.tag.outputs.tag }}
+      version: ${{ steps.tag.outputs.version }}
 
   build-macOS:
     runs-on: macos-latest
@@ -34,7 +39,7 @@ jobs:
     env:
       # macOS 11.0 Big Sur is the first version to support universal binaries
       MACOSX_DEPLOYMENT_TARGET: 11.0
-      VERSION: ${{needs.get-version.outputs.version}}
+      VERSION: ${{needs.get-version.outputs.tag}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -85,7 +90,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: get-version
     env:
-      VERSION: ${{needs.get-version.outputs.version}}
+      VERSION: ${{needs.get-version.outputs.tag}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -120,6 +125,7 @@ jobs:
     runs-on: windows-latest
     needs: get-version
     env:
+      VERSION_TAG: ${{needs.get-version.outputs.tag}}
       VERSION: ${{needs.get-version.outputs.version}}
     steps:
       - name: Checkout repository
@@ -153,7 +159,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ env.GAME_EXECUTABLE_NAME }}_windows.zip
-          asset_name: ${{ env.GAME_EXECUTABLE_NAME }}_${{ env.VERSION }}_windows.zip
+          asset_name: ${{ env.GAME_EXECUTABLE_NAME }}_${{ env.VERSION_TAG }}_windows.zip
           tag: ${{ github.ref }}
           overwrite: true
       - name: Upload installer
@@ -163,14 +169,14 @@ jobs:
          repo_token: ${{ secrets.GITHUB_TOKEN }}
          file: installer/en-US/installer.msi
          asset_name: ${{ env.GAME_EXECUTABLE_NAME }}_${{ steps.tag.outputs.tag }}_windows.msi
-         release_name: ${{ env.VERSION }}
+         release_name: ${{ env.VERSION_TAG }}
          overwrite: true
 
   build-web:
     runs-on: ubuntu-latest
     needs: get-version
     env:
-      VERSION: ${{needs.get-version.outputs.version}}
+      VERSION: ${{needs.get-version.outputs.tag}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
