Set version on CLI instead of Package.wxs

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -152,8 +152,7 @@ jobs:
           files: target/release/assets/ target/release/credits/ target/release/${{ env.GAME_EXECUTABLE_NAME }}.exe
           dest: ${{ env.GAME_EXECUTABLE_NAME }}_windows.zip
       - name: Create Installer
-        run: dotnet build -c Release build/windows/installer/Installer.wixproj --output installer
-        continue-on-error: true
+        run: dotnet build -p:Version=${{ env.VERSION }} -c Release build/windows/installer/Installer.wixproj --output installer
       - name: Upload release
         uses: svenstaro/upload-release-action@v2
         with:
@@ -164,7 +163,6 @@ jobs:
           overwrite: true
       - name: Upload installer
         uses: svenstaro/upload-release-action@v2
-        continue-on-error: true
         with:
          repo_token: ${{ secrets.GITHUB_TOKEN }}
          file: installer/en-US/installer.msi
