--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -166,7 +166,7 @@ jobs:
         with:
          repo_token: ${{ secrets.GITHUB_TOKEN }}
          file: installer/en-US/installer.msi
-         asset_name: ${{ env.GAME_EXECUTABLE_NAME }}_${{ steps.tag.outputs.tag }}_windows.msi
+         asset_name: ${{ env.GAME_EXECUTABLE_NAME }}_${{ env.VERSION_TAG }}_windows.msi
          release_name: ${{ env.VERSION_TAG }}
          overwrite: true
 
