--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,6 @@ default = [
 bevy = { version = "0.12.1", default-features = false }
 bevy_asset_loader = { version = "0.19" }
 rand = { version = "0.8.3" }
-bevy_mod_picking = "0.17.0"
 bevy_mod_outline = "0.6.0"
 
 # keep the following in sync with Bevy's dependencies
@@ -67,6 +66,16 @@ winit = { version = "0.28", default-features = false }
 image = { version = "0.24", default-features = false }
 indextree = "4.6.0"
 graphalgs = "0.1.1"
+
+[dependencies.bevy_mod_picking]
+version = "0.17.0"
+default-features = false
+features = [
+    "backend_raycast",
+    "backend_bevy_ui",
+    "highlight",
+    "selection",
+]
 
 # inline_tweak uses std::time and probably wouldn't work on wasm anyway. Just
 # define the tweak macro as a transparent passthrough on wasm
